log
Thu 21 Mar 2024 08:18:27 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:4: error: ‘A’ undeclared (first use in this function)
   46 |    A
      |    ^
exercises.c:46:4: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:46:5: error: expected ‘;’ before ‘return’
   46 |    A
      |     ^
      |     ;
   47 |    return L;
      |    ~~~~~~
exercises.c:45:10: error: unused variable ‘L’ [-Werror=unused-variable]
   45 |    List* L = create_list();
      |          ^
exercises.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d208c6d
